Role Based User Login And Registration Dashboard

--- a/SkillBridge/appsettings.json
+++ b/SkillBridge/appsettings.json
@@ -9,5 +9,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "Authentication": {
+    "Cookie": {
+      "AccessDeniedPath": "/Home/AccessDenied"
+    }
+  }
+
 }
